--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <header>
  <div class="container">
-  <img class="header__logo" src="/img/Logo.jpg" alt="#" />
+  <img class="header__logo" src="/images/logo.jpg" alt="#" />
   <a href="#">Home</a>
   <a href="#">About</a>
   <a href="#">Container</a>
